完成拉取消息的功能